tests/tests2/60_errors_and_warnings.expect
[test_56_btype_excess_1]
60_errors_and_warnings.c:2: error: too many basic types

[test_57_btype_excess_2]
60_errors_and_warnings.c:5: error: too many basic types

[test_58_function_redefinition]
60_errors_and_warnings.c:9: error: redefinition of 'f'

[test_global_redefinition]
60_errors_and_warnings.c:14: error: redefinition of 'xxx'

[test_59_function_array]
60_errors_and_warnings.c:17: error: declaration of an array of functions

[test_60_enum_redefinition]
60_errors_and_warnings.c:21: error: struct/union/enum already defined

[test_62_enumerator_redefinition]
60_errors_and_warnings.c:26: error: redefinition of enumerator 'RED'

[test_63_local_enumerator_redefinition]

[test_61_undefined_enum]
60_errors_and_warnings.c:46: error: unknown type size

[test_74_non_const_init]
60_errors_and_warnings.c:49: error: initializer element is not constant

[test_pointer_assignment]
60_errors_and_warnings.c:79: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:82: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:86: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:88: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:91: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:92: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:94: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:95: warning: assignment from incompatible pointer type
60_errors_and_warnings.c:98: warning: assignment discards qualifiers from pointer target type
60_errors_and_warnings.c:99: warning: assignment discards qualifiers from pointer target type
60_errors_and_warnings.c:103: warning: assignment discards qualifiers from pointer target type
60_errors_and_warnings.c:104: warning: assignment discards qualifiers from pointer target type
60_errors_and_warnings.c:109: warning: assignment of read-only location

[test_enum_compat]
60_errors_and_warnings.c:119: error: incompatible types for redefinition of 'f3'
